--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<h2>Spectral</h2>
-							<p>Another fine responsive<br />
-							site template freebie<br />
+							<h2>TEAM SWISH</h2>
+							<p>Our team created the <br />
+							NBA Game Ready app<br />
 							crafted by <a href="http://html5up.net">HTML5 UP</a>.</p>
 							<ul class="actions special">
 								<li><a href="#" class="button primary">Activate</a></li>
