--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							</header>
 																	
 						</div>
-							<img src="image_toyapersona.jpg" alt="Girl in a jacket" style="width:400px;height:500px;">
+							<img src="image/shikeyaanderson.jpg" alt="Shikeya Anderson" style="width:400px;height:500px;">
 					</section>
 
 				<!-- Two -->
