--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							</header>
 																	
 						</div>
-							<img src="image/shikeyaanderson.jpg" alt="Shikeya Anderson" style="width:400px;height:500px;">
+							<img src="images/shikeyaanderson.jpg" alt="Shikeya Anderson" style="width:300px;height:200px">
 					</section>
 
 				<!-- Two -->
