--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
 								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
 							</header>
-																	
+									<img src="images/shikeyaanderson.jpg" alt="Shikeya Anderson" style="width:300px;height:200px">								
 						</div>
 							<img src="images/shikeyaanderson.jpg" alt="Shikeya Anderson" style="width:300px;height:200px">
 					</section>
