--- a/index.html
+++ b/index.html
@@ -58,10 +58,9 @@
 								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
 							</header>
 									
-							<div class="image"><img src="images/shikeya.jpg" alt="" /></div><div class="content">
-								<h2>Magna primis lobortis<br />
-								sed ullamcorper</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="images/shikeya.jpg" alt="Shikeya Anderson"  style="width:200px;height:200px"  /></div><div class="content">
+								<h2>Shikeya Anderson</h2>
+								<p>UX/UI Designer</p>
 							</div>
 						</div>
 							
@@ -70,7 +69,7 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="Shikeya Anderson" style="width:200px;height:200px" /></div><div class="content">
+							<div class="image"><img src="images/pic01.jpg" alt=" " /></div><div class="content">
 								<h2>Shikeya Anderson</h2>
 								<p>UX/UI Designer</p>
 							</div>
