--- a/index.html
+++ b/index.html
@@ -59,17 +59,17 @@
 							</header>
 							<td>		
 							<div class="image"><img src="images/shikeya.jpg" alt="Kieran"  style="width:200px;height:300px"  /></div><div class="content">
-								<h2>Shikeya Anderson</h2>
+								<h4>Kieran</h4>
 								<p>UX/UI Designer</p>
 								</div> </td>
 							<td>
 							<div class="image"><img src="images/shikeya.jpg" alt="Yunis"  style="width:200px;height:300px"  /></div><div class="content">
-								<h3>Shikeya Anderson</h3>
+								<h4>Yunis</h4>
 								<p>UX/UI Designer</p>
 							</div> </td>
 							
 							<div class="image"><img src="images/shikeya.jpg" alt="Shikeya Anderson"  style="width:200px;height:300px"  /></div><div class="content">
-								<h2>Shikeya Anderson</h2>
+								<h4>Shikeya Anderson</h4>
 								<p>UX/UI Designer</p>
 							</div>
 							
