--- a/index.html
+++ b/index.html
@@ -81,13 +81,16 @@
 						
 						<div class="row">
   <div class="column">
-    <img src="images/shikeya.jpg" alt="Kieran" alt="Snow" style="width:100%">
+    <img src="images/shikeya.jpg" alt="Kieran"  style="width:50%">
+  </div><div class="content">
+								<h4>Kieran</h4>
+								<p>UX/UI Designer</p>
+								</div> 
+  <div class="column">
+    <img src="images/shikeya.jpg" alt="Yunis"  style="width:50%">
   </div>
   <div class="column">
-    <img src="images/shikeya.jpg" alt="Yunis" alt="Forest" style="width:100%">
-  </div>
-  <div class="column">
-    <img src="images/shikeya.jpg" alt="Shikeya Anderson" alt="Mountains" style="width:100%">
+    <img src="images/shikeya.jpg" alt="Shikeya Anderson"  style="width:50%">
   </div>
 </div>
 						
