--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <img src="images/shikeya.jpg" alt="Kieran"  style="width:50%">
   </div><br/>
 <div class="details">
-	<h4>,a href=#>Kieran</a></h4>
+	<h4><a href=#>Kieran</a></h4>
 <p>UX/UI Designer</p>
 </div> 
 							
