--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
 <div class="column">						
 <figure>
   <img src="images/shikeya.jpg" alt="Shikeya Anderson" style="width:25%">
-  <figcaption>Kieran Windly</figcaption>
+	<figcaption>Kieran Windly </br>
+	Software Developer</figcaption>
 </figure>
 </div>	
 	
