--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <div class="column">						
 <figure>
   <img src="images/shikeya.jpg" alt="Shikeya Anderson" style="width:100%">
-	<figcaption>Kieran Windly </br>
+	<figcaption><h4>Kieran Windly</h4> </br>
 	Software Developer</figcaption>
 </figure>
 </div>	
