--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt=" " /></div><div class="content">
+							<div class="image"><img src="images/new phone gradient.png.jpg" alt=" " /></div><div class="content">
 								<h2>Shikeya Anderson</h2>
 								<p>UX/UI Designer</p>
 							</div>
