--- a/index.html
+++ b/index.html
@@ -131,8 +131,9 @@
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
 							
-								<h2>Shikeya Anderson</h2>
-								<p>UX/UI Designer</p>
+								<h2>NBA Game Ready App</h2>
+								<p>This app displays all live and upcoming NBA games. The features includes yesterday’s final scores, today’s  live scores, game times for the next day, access to purchasing game tickets and the NBA live twitter feed. 
+ </p>
 							
 						</section>
 						<section class="spotlight">
