--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <div class="column">						
 <figure>
   <img src="images/shikeya.jpg" alt="Kieran" style="width:80%">
-	<figcaption><h5>Kieran Windly</h5></figcaption>
+	<figcaption><h5>Kieran Windley</h5></figcaption>
 </figure>
 </div>	
 	
@@ -130,7 +130,7 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="content">
+							<div class="inner">
 								<h2>NBA Game Ready App</h2>
 								<p>This app displays all live and upcoming NBA games. The features includes yesterday’s final scores, today’s  live scores, game times for the next day, access to purchasing game tickets and the NBA live twitter feed. 
  </p>
