--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 				<!-- Banner -->
 					<section id="banner">
-						<div class="inner">
+						<div class="center">
 							<h2>TEAM SWISH</h2>
 							<p>Our team created the <br />
 							NBA Game Ready app<br />
