--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
 
 <div class="column">						
 <figure>
-  <img src="images/shikeya.jpg" alt="Kieran" style="width:80%">
+  <img src="images/kieran.jpg" alt="Kieran" style="width:80%">
 	<figcaption><h5>Kieran Windley</h5></figcaption>
 </figure>
 </div>	
 	
 <div class="column">	
 <figure>
-  <img src="images/shikeya.jpg" alt="Yunis" style="width:80%">
+  <img src="images/yunis.jpg" alt="Yunis" style="width:80%">
 	<figcaption><h5>Yunis Khamis</h5></figcaption>
 </figure>
 	</div>	
@@ -112,14 +112,14 @@
 	
 <div class="column">
 <figure>
-  <img src="images/shikeya.jpg" alt="Claire" style="width:80%">
+  <img src="images/claire.jpg" alt="Claire" style="width:80%">
 	<figcaption><h5>Claire Friloux</h5></figcaption>
 </figure>	
 </div>	
 	
 <div class="column">
 <figure>
-  <img src="images/shikeya.jpg" alt="Sabur" style="width:80%">
+  <img src="images/sabur.jpg" alt="Sabur" style="width:80%">
 	<figcaption><h5>Sabur Muhammad</h5></figcaption>
 </figure>	
 </div>	
