--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 <div class="column">						
 <figure>
-  <img src="images/kieran.jpg" alt="Kieran" style="width:80%">
+  <img src="images/kieran.jpg" alt="Kieran" style="width:80%; height:100%">
 	<figcaption><h5>Kieran Windley</h5></figcaption>
 </figure>
 </div>	
