--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
 <div class="column">						
 <figure>
   <img src="images/kieran.jpg" alt="Kieran" style="width:80%; height:100%">
-	<figcaption><h5>Kieran Windley</h5></figcaption>
+	<figcaption><h5>Kieran Windley</h5></br>
+		<h6>Software Developer</h6></figcaption>
 </figure>
 </div>	
 	
@@ -105,7 +106,7 @@
 	
 <div class="column">
 <figure>
-  <img src="images/shikeya.jpg" alt="Raven" style="width:80%">
+  <img src="images/raven.jpg" alt="Raven" style="width:80%">
 	<figcaption><h5>Raven Ross</h5></figcaption>
 </figure>	
 </div>	
