--- a/index.html
+++ b/index.html
@@ -84,8 +84,10 @@
 <div class="column">						
 <figure>
   <img src="images/kieran.jpg" alt="Kieran" style="width:80%; height:100%">
-	<figcaption><h5>Kieran Windley</h5></br>
-		<h6>Software Developer</h6></figcaption>
+	<figcaption><h5>Kieran Windley</h5></figcaption><div class="details">
+        <h3><a href="#">In the subway</a></h3>
+        <p class="image-author">Matt Stone</p>
+      </div>
 </figure>
 </div>	
 	
