--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
 <div class="column">						
 <figure>
   <img src="images/kieran.jpg" alt="Kieran" style="width:80%; height:100%">
-	<figcaption><h5>Kieran Windley</h5></figcaption><div class="details">
-        <h3><a href="#">In the subway</a></h3>
+	<div class="details">
+        <h5><a href="#">In the subway</a></h5>
         <p class="image-author">Matt Stone</p>
       </div>
 </figure>
