--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 <figure>
   <img src="images/kieran.jpg" alt="Kieran" style="width:80%; height:100%">
 	<div class="details">
-        <h5><a href="#">In the subway</a></h5>
-        <p class="image-author">Matt Stone</p>
+        <h5><a href="#">Kieran Windley</a></h5>
+        <p class="image-title">Engineer</p>
       </div>
 </figure>
 </div>	
