--- a/index.html
+++ b/index.html
@@ -94,14 +94,20 @@
 <div class="column">	
 <figure>
   <img src="images/yunis.jpg" alt="Yunis" style="width:80%">
-	<figcaption><h5>Yunis Khamis</h5></figcaption>
+	<div class="details">
+        <h5><a href="#">Yunis Khamis</a></h5>
+        <p class="image-title">Engineer</p>
+      </div>
 </figure>
 	</div>	
 
 <div class="column">
 <figure>
   <img src="images/shikeya.jpg" alt="Shikeya" style="width:80%">
-	<figcaption><h5>Shikeya Anderson</h5></figcaption>
+	<div class="details">
+        <h5><a href="#">Shikeya Anderson</a></h5>
+        <p class="image-title">UX/UI Designer</p>
+      </div>
 </figure>	
 </div>	
 	
@@ -109,21 +115,30 @@
 <div class="column">
 <figure>
   <img src="images/raven.jpg" alt="Raven" style="width:80%">
-	<figcaption><h5>Raven Ross</h5></figcaption>
+	<div class="details">
+        <h5><a href="#">Raven Ross</a></h5>
+        <p class="image-title">Engineer</p>
+      </div>
 </figure>	
 </div>	
 	
 <div class="column">
 <figure>
   <img src="images/claire.jpg" alt="Claire" style="width:80%">
-	<figcaption><h5>Claire Friloux</h5></figcaption>
+	<div class="details">
+        <h5><a href="#">Claire Friloux</a></h5>
+        <p class="image-title">UX/UI Designer</p>
+      </div>
 </figure>	
 </div>	
 	
 <div class="column">
 <figure>
   <img src="images/sabur.jpg" alt="Sabur" style="width:80%">
-	<figcaption><h5>Sabur Muhammad</h5></figcaption>
+	<div class="details">
+        <h5><a href="#">Sabur Muhammad</a></h5>
+        <p class="image-title">Engineer</p>
+      </div>
 </figure>	
 </div>	
 </div	
