--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 	
 <div class="column">	
 <figure>
-  <img src="images/yunis.jpg" alt="Yunis" style="width:80%">
+  <img src="images/yunis.jpg" alt="Yunis" style="width:80%; height:100%">
 	<div class="details">
         <h5><a href="#">Yunis Khamis</a></h5>
         <p class="image-title">Engineer</p>
@@ -103,7 +103,7 @@
 
 <div class="column">
 <figure>
-  <img src="images/shikeya.jpg" alt="Shikeya" style="width:80%">
+  <img src="images/shikeya.jpg" alt="Shikeya" style="width:80%; height:100%">
 	<div class="details">
         <h5><a href="#">Shikeya Anderson</a></h5>
         <p class="image-title">UX/UI Designer</p>
@@ -114,7 +114,7 @@
 	
 <div class="column">
 <figure>
-  <img src="images/raven.jpg" alt="Raven" style="width:80%">
+  <img src="images/raven.jpg" alt="Raven" style="width:80%; height:100%">
 	<div class="details">
         <h5><a href="#">Raven Ross</a></h5>
         <p class="image-title">Engineer</p>
@@ -124,7 +124,7 @@
 	
 <div class="column">
 <figure>
-  <img src="images/claire.jpg" alt="Claire" style="width:80%">
+  <img src="images/claire.jpg" alt="Claire" style="width:80%; height:100%">
 	<div class="details">
         <h5><a href="#">Claire Friloux</a></h5>
         <p class="image-title">UX/UI Designer</p>
@@ -134,7 +134,7 @@
 	
 <div class="column">
 <figure>
-  <img src="images/sabur.jpg" alt="Sabur" style="width:80%">
+  <img src="images/sabur.jpg" alt="Sabur" style="width:80%; height:100%">
 	<div class="details">
         <h5><a href="#">Sabur Muhammad</a></h5>
         <p class="image-title">Engineer</p>
