--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 <div class="column">						
 <figure>
-  <img src="images/kieran.jpg" alt="Kieran" "width="200" height="300">
+  <img src="images/kieran.jpg" alt="Kieran" style="width:80%; height:100%">
 	<div class="details">
         <h5><a href="#">Kieran Windley</a></h5>
         <p class="image-title">Engineer</p>
