--- a/index.html
+++ b/index.html
@@ -158,9 +158,10 @@
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Accumsan mus tortor nunc aliquet</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>Overview</h2>
+								<p>This app displays all live and upcoming NBA games. The features includes yesterday’s final scores, <br />
+								today’s  live scores, game times for the next day, access to purchasing game tickets and the NBA live twitter <br/>
+									feed.fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
 							</header>
 							<ul class="features">
 								<li class="icon fa-paper-plane">
