--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
 							<header class="major">
 								<h2>Overview</h2>
 								<p>This app displays all live and upcoming NBA games. The features includes yesterday’s final scores, <br />
-								today’s  live scores, game times for the next day, access to purchasing game tickets and the NBA live twitter <br/>
-									feed.fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								today’s  live scores, game times for the next day, access to purchasing game tickets and the NBA live twitter.</p>
+									.</p>
 							</header>
 							<ul class="features">
 								<li class="icon fa-paper-plane">
