--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 									.</p>
 							</header>
 							<ul class="features">
-								<li class="icon fa-paper-plane">
+								<li class="icon ball2.jpg">
 									<h3>Arcu accumsan</h3>
 									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
 								</li>
