--- a/index.html
+++ b/index.html
@@ -165,7 +165,12 @@
 							</header>
 							<ul class="features">
 								<li class="">
-									<h3>Arcu accumsan</h3>
+				 					<h3>Screen Archetypes</h3>
+									<ul>
+ 									 <li>ists of game times, scores, quarters, and television networks</li>
+  									 <li>buy ticket icon/button that connects to ticketing website</li>
+ 									 <li>networks/television link that connects to the network website</li>
+								        </ul>  
 									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
 								</li>
 								<li class="">
