--- a/index.html
+++ b/index.html
@@ -166,11 +166,11 @@
 							<ul class="features">
 								<li class="">
 				 					<h3>Screen Archetypes</h3>
-									<ul>
- 									 <li>ists of game times, scores, quarters, and television networks</li>
-  									 <li>buy ticket icon/button that connects to ticketing website</li>
- 									 <li>networks/television link that connects to the network website</li>
-								        </ul>  
+									
+ 									 <li>Lists of game times, scores, quarters, and television networks</li>
+  									 <li>Buy ticket icon/button that connects to ticketing website</li>
+ 									 <li>Networks/television link that connects to the network website</li>
+								         
 									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
 								</li>
 								<li class="">
