--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
 								<li class="">
 				 					<h3>Screen Archetypes</h3>
 									
- 									 <li>Lists of game times, scores, quarters, and television networks</li>
-  									 <li>Buy ticket icon/button that connects to ticketing website</li>
- 									 <li>Networks/television link that connects to the network website</li>
+ 									 <p>Lists of game times, scores, quarters, and television networks</p>
+  									 <p>Buy ticket icon/button that connects to ticketing website</p>
+ 									 <p>Networks/television link that connects to the network website</p>
 								         
 									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
 								</li>
