--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 						<div class="inner">
 							<header class="major">
 								<h2>Overview</h2>
-								<p>This app displays all live and upcoming NBA games. The features includes yesterday’s final scores, <br />
+								<p>The NBA Game Ready App displays all live and upcoming NBA games. The features includes yesterday’s final scores, <br />
 								today’s  live scores, game times for the next day, access to purchasing game tickets and the NBA live twitter.</p>
 									
 							</header>
