--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 								
 								<li class="">
 									<h3>Navigation</h3>
-									<h4>Flow Navigation (Screen to Screen to Browser)</h4>
+									<h5>Flow Navigation</h5> <p>(Screen to Screen to Browser)</p>
 				 					<p>Today screen -> <- Yesterday screen -> <- Tomorrow screen</p>
   									 <p>Buy ticket button -> Opens browser to ticketing website</p>
  									 <p>etworks/Television link -> Opens browser to Network's website</p>
