--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 									<h5>Flow Navigation</h5> <p>(Screen to Screen to Browser)</p>
 				 					<p>Today screen -> <- Yesterday screen -> <- Tomorrow screen</p>
   									 <p>Buy ticket button -> Opens browser to ticketing website</p>
- 									 <p>etworks/Television link -> Opens browser to Network's website</p>
+ 									 <p>Networks/Television link -> Opens browser to Network's website</p>
 								</li> 
 								
 								
