--- a/generic.html
+++ b/generic.html
@@ -27,10 +27,9 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Generic</a></li>
+											<li><a href="generic.html">About</a></li>
 											<li><a href="elements.html">Elements</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
+											
 										</ul>
 									</div>
 								</li>
@@ -41,8 +40,8 @@
 				<!-- Main -->
 					<article id="main">
 						<header>
-							<h2>Generic Page</h2>
-							<p>Aliquam ut ex ut interdum donec amet imperdiet eleifend</p>
+							<h2>Overview</h2>
+							<p>Displays all live and upcoming NBA games, including live scores and television networks, in a format that's quick and easy to read.</p>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
