--- a/elements.html
+++ b/elements.html
@@ -51,12 +51,12 @@
 									
 									<h5>Ordered</h5>
 											<ol>
-												<li>Dolor pulvinar etiam.</li>
-												<li>Etiam vel felis viverra.</li>
-												<li>Felis enim feugiat.</li>
-												<li>Dolor pulvinar etiam.</li>
-												<li>Etiam vel felis lorem.</li>
-												<li>Felis enim et feugiat.</li>
+												<li>Overview</li>
+												<li>Product Specs</li>
+												<li>Wireframes</li>
+												<li>Networking</li>
+												<li>Architecture</li>
+												<li>Responsibilities</li>
 											</ol>
 											<h5>Icons</h5>
 									
