--- a/elements.html
+++ b/elements.html
@@ -140,7 +140,7 @@
 												
 											<header>
 											<h2>Wireframes</h2>	
-												 <img src="images/phone.jpg" alt="Yunis" style="width:20%; height:40%">
+												 <img src="images/.jpg" alt="Yunis" style="width:20%; height:40%">
 										<hr />
 												
 											<header>
