--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">About</a></li>
-											<li><a href="elements.html">Elements</a></li>
+											<li><a href="generic.html">Empty</a></li>
+											<li><a href="elements.html">About</a></li>
 											
 										</ul>
 									</div>
