--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Empty</a></li>
+											<li><a href="generic.html">Generic</a></li>
 											<li><a href="elements.html">About</a></li>
 											
 										</ul>
