--- a/elements.html
+++ b/elements.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Spectral</a></h1>
+						<h1><a href="index.html">Team Swish</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -40,7 +40,7 @@
 				<!-- Main -->
 					<article id="main">
 						<header>
-							<h2>Overview</h2>
+							<h2>NBA Game Ready</h2>
 							<p>Displays all live and upcoming NBA games, including live scores and television networks, in a format that's quick and easy to read.</p>
 						</header>
 						<section class="wrapper style5">
