--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html"></a></li>
+											<li><a href="generic.html"> </a></li>
 											<li><a href="elements.html">About</a></li>
 											
 										</ul>
@@ -64,7 +64,7 @@
 							NBA Game Ready app<br />
 							
 						</div>
-						<a href="#one" class="more scrolly">Learn More</a>
+						<a href="#one" class="more scrolly">Check out the creators</a>
 					</section>
 
 				<!-- One -->
