--- a/elements.html
+++ b/elements.html
@@ -41,7 +41,7 @@
 					<article id="main">
 						<header>
 							<h2>NBA Game Ready</h2>
-							<p>Displays all live and upcoming NBA games, including live scores and television networks, in a format that's quick and easy to read.</p>
+							<p>Displays all live and upcoming NBA games, including live scores and television networks,</br> in a format that's quick and easy to read.</p>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
