--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 							NBA Game Ready app<br />
 							
 						</div>
-						<a href="#one" class="more scrolly">Check out the creators</a>
+						<a href="#one" class="more scrolly">The Creators</a>
 					</section>
 
 				<!-- One -->
