--- a/elements.html
+++ b/elements.html
@@ -140,7 +140,7 @@
 												
 											<header>
 											<h2>Wireframes</h2>	
-												 <img src="images/wireframe.jpg" alt="Wireframe" style="width:40%; height:50%">
+												 <img src="images/wireframes.jpg" alt="Wireframe" style="width:40%; height:50%">
 										<hr />
 												
 											<header>
