--- a/generic.html
+++ b/generic.html
@@ -99,7 +99,7 @@
 								
 								<h3>NBA Game Ready App</h3>
 								<p>insert link for completed app GIF here</p>
-								<img src="https://imgflip.com/gif" alt="this slowpoke moves"  width="250" />
+								<img src="https://imgflip.com/gif" alt="oops! it's not working"  width="250" />
 								
 								<h3>Team Swish Website</h3>
 								<p>insert website link here</p>
