--- a/generic.html
+++ b/generic.html
@@ -27,7 +27,7 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Prototypes</a></li>
+											<li><a href="generic.html">Our App</a></li>
 											<li><a href="elements.html">About</a></li>
 											
 										</ul>
