--- a/generic.html
+++ b/generic.html
@@ -40,7 +40,7 @@
 				<!-- Main -->
 					<article id="main">
 						<header>
-							<h2>Prototypes</h2>
+							<h2>Our App</h2>
 							<p></p>
 							 <img src="images/ball2.jpg" alt="Wireframe" style="width:10%; height:20%">
 									
